--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="card.css">
+    <title>Card Layout</title>
 </head>
 <body>
-    
+   <div class="card">
+       <img class="avatar" id="jloftis-avatar" src="avatar.JPG" alt="Jacob Loftis">
+       <h1>Jacob Loftis</h1>
+       <h2>Student at MSU</h2>
+       <ul class="contacts">
+           <li><a href=""><img src="email.png" alt="Email" ></a></li>
+           <li><a href=""><img src="twitter.png" alt="Twitter" ></a></li>
+           <li><a href=""><img src="git.png" alt="Github" ></a></li>
+       </ul>
+   </div>
 </body>
 </html>
+
+
